--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,6 @@ Description: One paragraph description of what the package does as one
     or more full sentences.
 License: GPL (>= 2)
 Imports:
-    Rcpp (>= 0.12.8)
+    Rcpp (>= 0.12.8), ggplot2
 LinkingTo: Rcpp, BH
 RoxygenNote: 5.0.1
