About to rename t -> z and c -> lambda

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,8 @@
 export(clvm)
 export(plot_elbo)
 export(significant_interactions)
+export(simulate_phenopath)
 import(ggplot2)
-useDynLib(clvm)
+importFrom(dplyr,mutate)
+importFrom(tibble,as_data_frame)
+useDynLib(phenopath)
