--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: phenopath
 Type: Package
-Title: Genomic trajectories for heterogeneous genetic and environmental backgrounds
+Title: Genomic trajectories with heterogeneous genetic and environmental backgrounds
 Version: 1.0
 Date: 2017-7-6
 Author: Kieran Campbell
@@ -12,3 +12,6 @@ Imports:
     Rcpp (>= 0.12.8), ggplot2
 LinkingTo: Rcpp, BH
 RoxygenNote: 5.0.1
+Suggests: knitr,
+    rmarkdown
+VignetteBuilder: knitr
