--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,9 @@ Description: One paragraph description of what the package does as one
     or more full sentences.
 License: GPL (>= 2)
 Imports:
-    Rcpp (>= 0.12.8), ggplot2
+    Rcpp (>= 0.12.8), 
+    ggplot2,
+    Biobase
 LinkingTo: Rcpp, BH
 RoxygenNote: 5.0.1
 Suggests: knitr,
