--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,15 @@ export(plot_elbo)
 export(significant_interactions)
 export(simulate_phenopath)
 export(trajectory)
+import(Rcpp)
 import(ggplot2)
 importFrom(dplyr,mutate)
+importFrom(methods,is)
+importFrom(stats,coef)
+importFrom(stats,lm)
+importFrom(stats,model.matrix)
+importFrom(stats,prcomp)
+importFrom(stats,rnorm)
+importFrom(stats,sd)
 importFrom(tibble,as_data_frame)
 useDynLib(phenopath)
