Passes R CMD check with only 2 (easily fixable) notes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,8 @@ Suggests:
     rmarkdown,
     tidyr,
     forcats,
-    testthat
+    testthat,
+    scater
 biocViews: RNASeq, GeneExpression, Bayesian, SingleCell, PrincipalComponent
 LinkingTo: Rcpp, BH
 RoxygenNote: 6.0.1
