Added biocstyle and updated description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,9 @@ Version: 0.99.0
 Date: 2017-7-28
 Author: Kieran Campbell
 Maintainer: Kieran Campbell <kieranrcampbell@gmail.com>
-Description: One paragraph description of what the package does as one
-    or more full sentences.
+Description: PhenoPath infers genomic trajectories (pseudotimes) in the presence of
+heterogeneous genetic and environmental backgrounds and tests for interactions 
+between them.
 License: GPL (>= 2)
 Imports:
   Rcpp (>= 0.12.8), 
@@ -22,7 +23,8 @@ Suggests:
     tidyr,
     forcats,
     testthat,
-    scater
+    scater,
+    BiocStyle
 biocViews: RNASeq, GeneExpression, Bayesian, SingleCell, PrincipalComponent
 LinkingTo: Rcpp, BH
 RoxygenNote: 6.0.1
