--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: phenopath
 Type: Package
 Title: Genomic trajectories with heterogeneous genetic and environmental backgrounds
-Version: 0.99.2
+Version: 0.99.3
 Date: 2017-7-28
 Author: Kieran Campbell
 Maintainer: Kieran Campbell <kieranrcampbell@gmail.com>
 Description: PhenoPath infers genomic trajectories (pseudotimes) in the presence of
   heterogeneous genetic and environmental backgrounds and tests for interactions 
   between them.
-License: GPL (>= 2)
+License: Apache License (== 2.0)
 Imports:
   Rcpp (>= 0.12.8), 
   methods,
