--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,phenopath_fit)
 export(clvm)
 export(interaction_effects)
 export(interaction_sds)
+export(interactions)
 export(phenopath)
 export(plot_elbo)
 export(significant_interactions)
@@ -20,4 +21,5 @@ importFrom(stats,prcomp)
 importFrom(stats,rnorm)
 importFrom(stats,sd)
 importFrom(tibble,as_data_frame)
+importFrom(tidyr,gather)
 useDynLib(phenopath)
