--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ export(simulate_phenopath)
 export(trajectory)
 import(Rcpp)
 import(ggplot2)
+importFrom(SummarizedExperiment,assay)
+importFrom(SummarizedExperiment,colData)
 importFrom(dplyr,mutate)
 importFrom(methods,is)
 importFrom(stats,coef)
