--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,8 +9,6 @@ Description: PhenoPath infers genomic trajectories (pseudotimes) in the presence
   heterogeneous genetic and environmental backgrounds and tests for interactions 
   between them.
 License: Apache License (== 2.0)
-Depends:
-  SingleCellExperiment
 Imports:
   Rcpp (>= 0.12.8), 
   SummarizedExperiment,
@@ -25,7 +23,8 @@ Suggests:
     rmarkdown,
     forcats,
     testthat,
-    BiocStyle
+    BiocStyle,
+    SingleCellExperiment
 biocViews: RNASeq, GeneExpression, Bayesian, SingleCell, PrincipalComponent
 LinkingTo: Rcpp
 RoxygenNote: 6.0.1
