--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: phenopath
 Type: Package
 Title: Genomic trajectories with heterogeneous genetic and environmental backgrounds
-Version: 1.7.0
+Version: 1.7.1
 Date: 2017-10-24
 Author: Kieran Campbell
 Maintainer: Kieran Campbell <kieranrcampbell@gmail.com>
@@ -25,7 +25,7 @@ Suggests:
     testthat,
     BiocStyle,
     SingleCellExperiment
-biocViews: RNASeq, GeneExpression, Bayesian, SingleCell, PrincipalComponent
+biocViews: ImmunoOncology, RNASeq, GeneExpression, Bayesian, SingleCell, PrincipalComponent
 LinkingTo: Rcpp
 RoxygenNote: 6.0.1
 VignetteBuilder: knitr
